welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:7: error: not found: value biscuits
	while (2*biscuits!=caseOrange+1) {
                 ^